--- a/contents/pages/about.mdx
+++ b/contents/pages/about.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'About'
-description: 'More about me. My carrer path, and how i work as a Frontend Developer, or maybe how many times i eating meatball everyday.'
+description: 'More about me. My carrer path, and how i work as a Product Engineer, or maybe how many times i eating meatball everyday.'
 ---
 
-Hello my name is Alfan Jauhari, you can call me Alfan or Hari (which I really don't recommend :p). Currently, I am a Frontend Developer at [Nusantech](https://nusantech.com).
+Hello my name is Alfan Jauhari, you can call me Alfan. Currently, I am a Product Engineer at [Zero One Group](https://zero-one-group.com).
 
 I am happy to learn about the Web Frontend and any programming topic, especially Javascript, which has become my main language for building or creating an application, whether web or android.
 
