--- a/src/content/blog/elden-ring-and-my-engineering-way.mdx
+++ b/src/content/blog/elden-ring-and-my-engineering-way.mdx
@@ -1,5 +1,5 @@
 ---
-title: How Elden Ring Changes My Engineering Ways
+title: Elden Ring and My Engineering Ways
 description: Elden ring was one of the best game i ever played. And it actually changed my perspective about engineering and i didn't expect that came from games
 tag: Thoughts
 date: 2024-10-25
