--- a/apps/web/src/contents/updates/website-refresh-2024.mdx
+++ b/apps/web/src/contents/updates/website-refresh-2024.mdx
@@ -5,6 +5,9 @@ description: Feeling energized to write a new article but not happy with my old 
 date: 2024-10-25
 ---
 
+## UPDATE Aug 2025
+I moved back to NextJS lol!
+
 2024 passed quickly and my lust for overengineering returned. I was getting bored with my old website design which designed 2 years ago by myself. Back then, i build my website with NextJS with [Contentlayer](https://contentlayer.dev/) as my content SDK. One year after that, my office introduce me with Go which i loved it. The simplicity, more type safety and the speed of Go make me wanna to learn more about this langugage. And so, i tempted to create something with Go; Naturally, the first thing that came to mind was, "Let's rewrite the website in Go!" (Because who doesn’t love a good rewrite, right?). After two months of "development" (read: playing games), I finally rewrote the site using my very limited knowledge of Go.
 
 Then, in 2024, I tried Astro, which is a competitor to NextJS, and wow—this thing is pure magic. It seriously boosted my workflow, and I knew I had to rewrite my website in Astro too. But this time, I didn’t just want to rewrite it; I wanted to refresh the design as well.
@@ -46,5 +49,3 @@ It took many days to build this website because i have to work on some projects 
 
 ## Thats it
 I open-sourced the code, so feel free to fork it, play around with it, or maybe even contribute. Who knows? xD
-
----
