feat: updates page tag

--- a/src/contents/updates/elden-ring-and-my-engineering-way.mdx
+++ b/src/contents/updates/elden-ring-and-my-engineering-way.mdx
@@ -5,8 +5,7 @@ tag: Thoughts
 date: 2024-10-25
 ---
 
-import RykardImage from '../../assets/blog/elden-ring-and-my-engineering-way/rykard.png';
-import Image from 'next/image';
+import RykardImage from '@/assets/updates/elden-ring-and-my-engineering-way/rykard.png';
 
 ## PC and First Story Game Experiences
 
