--- a/content/updates/web-development-with-progressive-enhancement.mdx
+++ b/content/updates/web-development-with-progressive-enhancement.mdx
@@ -91,6 +91,143 @@ This snippet showing how we maintain form compatibility when implementing progre
 
 As you can see in that playground we have two files that create basic forms with React.JS. Nothing special, just a basic form with styling but I added some conditions to support more backward compatibility :
 
+<Sandpack
+>
+  <SandpackFile name="App.tsx">
+  {`import styles from './App.module.css'
+
+  export default function App() {
+    const ACTION_URL =
+      document.referrer +
+      'api/updates/web-development-with-progressive-enhancement/form.html'
+
+    const onSubmit = async (event: React.FormEvent<HTMLFormElement>) => {
+      // @ts-expect-error
+      // You can comment this line out if you want to see the form submission with fetch
+      delete window.fetch
+
+      if ('fetch' in window) {
+        event.preventDefault()
+
+        const formData = new FormData(event.currentTarget)
+        const name = formData.get('name') as string
+        const email = formData.get('email') as string
+
+        const data = await fetch(ACTION_URL, {
+          method: 'POST',
+          body: JSON.stringify({ name, email }),
+          headers: { 'Content-Type': 'application/json' },
+        }).then((res) => res.json())
+
+        alert(JSON.stringify(data, null, 2))
+      }
+    }
+
+    return (
+      <form
+        action={ACTION_URL}
+        className={styles.form}
+        method="POST"
+        encType="multipart/form-data"
+        onSubmit={onSubmit}
+      >
+        <div className={styles.field}>
+          <label className={styles.label} htmlFor="name">
+            Name
+          </label>
+          <input
+            className={styles.input}
+            type="text"
+            id="name"
+            name="name"
+            placeholder="Name"
+            required
+          />
+        </div>
+
+        <div className={styles.field}>
+          <label className={styles.label} htmlFor="email">
+            Email
+          </label>
+          <input
+            className={styles.input}
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Email"
+          />
+        </div>
+
+        <button type="submit" className={styles.button}>
+          Submit
+        </button>
+      </form>
+    )
+  }`}
+  </SandpackFile>
+  <SandpackFile name="App.module.css">
+  {`.form,
+  .field,
+  .label,
+  .input {
+    display: block;
+  }
+
+  .form > :not([hidden]) ~ :not([hidden]) {
+    margin-top: 1rem;
+  }
+
+  .field > :not([hidden]) ~ :not([hidden]) {
+    margin-top: 0.3rem;
+  }
+
+  .label {
+    font-size: 14px;
+  }
+
+  .input {
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+    color: #333;
+  }
+
+  .button {
+    padding: 0.5rem;
+    background-color: #0070f3;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 14px;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  @supports (display: flex) {
+    .form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .form > :not([hidden]) ~ :not([hidden]) {
+      margin-top: 0;
+    }
+
+    .field {
+      display: flex;
+      flex-direction: column;
+      gap: 0.3rem;
+    }
+
+    .field > :not([hidden]) ~ :not([hidden]) {
+      margin-top: 0;
+    }
+  }`}
+  </SandpackFile>
+</Sandpack>
+
 - In the `App.tsx` the default behavior for the form is to directly call the POST endpoint without interference from JavaScript itself so it can still work even on older browsers. But, I added a condition to make the form submitted by JavaScript with `fetch` API so you can validate or manipulate data when the user submits the form. You can comment/uncomment on line 11 to see how to form behavior with and without `fetch` API.
 - Moving to `App.module.css` I created basic CSS styling with the gap on each input and button. To create the gap I used `subsequent-sibling combinator` by default to support older browsers and then I added the `@supports` rule so when the user browser supports flex I&lsquo;ll use it instead.
 
