feat: add image optimization

--- a/content/updates/elden-ring-and-my-engineering-way.mdx
+++ b/content/updates/elden-ring-and-my-engineering-way.mdx
@@ -44,3 +44,12 @@ Playing Elden Ring and Programming can be difficult, but sometimes when we alrea
 I think playing Elden Ring was a funny way to improve my software engineering skills by connecting things.
 
 I hope you can find some ways to be a better software engineer without burning out yourselves.
+
+And togethaaa
+
+<Image
+  src="/updates/elden-ring-and-my-engineering-way/rykard.webp"
+  height={320}
+  width={321}
+  aspectRatio={1}
+/>
