fix: add sharp lib

--- a/content/works/zog-website.mdx
+++ b/content/works/zog-website.mdx
@@ -11,7 +11,7 @@ challenge: |
   - Implementing advanced 3D graphics that feel fluid and integrated with the UI, requiring complex calculations for object positioning and form. Balancing user experience, visual sophistication, and performance especially for interactive and animated elements.
   - First-time implementation of Three.js with React Three Fiber, pushing the limits of what I’d done before with 3D on the web.
 solution: I implemented multilingual routing through the Next.js Page Router to keep translations clean, predictable, and easy to extend. For SEO, I followed Google’s best practices plus a mix of vetted third-party guidelines to structure metadata, indexing, and semantic content. And for SSR, I fully leveraged Next.js’ server-side rendering to deliver faster initial load times, stable performance across regions, and a better foundation for dynamic content.
-thumbnail: /works/GCBC.avif
+thumbnail: /works/ZOG-Website.avif
 ---
 
 ## About Zero One Group Website
@@ -21,9 +21,9 @@ Zero One Group’s official website (zero-one-group.com) serves as a digital sho
 This project required balancing UX/UI excellence with performance constraints ensuring the visual sophistication didn’t come at the cost of accessibility and responsiveness. Three-dimensional elements are used not as gimmicks but as expressive layers that support the narrative and enhance user engagement. By leveraging React, React Three Fiber, and tailored performance optimizations, the website delivers a seamless and dynamic experience for visitors while staying true to Zero One Group’s progressive brand identity.
 
 <Image
-  src="/works/GCBC.avif"
+  src="/works/ZOG-Website.avif"
   quality={50}
   width={1024}
   aspectRatio={16 / 9}
-  title="GCBC Inteface"
+  title="ZOG Website Inteface"
 />
