feat: change to cloudinary

--- a/content/updates/elden-ring-and-my-engineering-way.mdx
+++ b/content/updates/elden-ring-and-my-engineering-way.mdx
@@ -48,7 +48,7 @@ I hope you can find some ways to be a better software engineer without burning o
 And togethaaa
 
 <Image
-  src="/updates/elden-ring-and-my-engineering-way/rykard.webp"
+  src="https://res.cloudinary.com/alfanjauhari/image/upload/updates/elden-ring-and-my-engineering-way/rykard.webp"
   height={320}
   width={321}
   aspectRatio={1}
