--- a/content/works/gcbc.mdx
+++ b/content/works/gcbc.mdx
@@ -8,7 +8,7 @@ techstack: [TypeScript, ReactJS, NextJS, PostgreSQL]
 link: https://capacity-building.org
 challenge: Building the GCBC platform meant handling a few core hurdles. The site needed reliable multilingual support to reach EMDE audiences globally, strong SEO performance to surface climate-finance resources effectively, and robust SSR to ensure fast, consistent delivery for a content-heavy platform. Managing all of this while keeping the experience smooth and scalable added an extra layer of complexity.
 solution: I implemented multilingual routing through the Next.js Page Router to keep translations clean, predictable, and easy to extend. For SEO, I followed Google’s best practices plus a mix of vetted third-party guidelines to structure metadata, indexing, and semantic content. And for SSR, I fully leveraged Next.js’ server-side rendering to deliver faster initial load times, stable performance across regions, and a better foundation for dynamic content.
-thumbnail: /works/GCBC.avif
+thumbnail: https://res.cloudinary.com/alfanjauhari/image/upload/works/GCBC.avif
 ---
 
 ## About Global Capacity Building Coalition
@@ -22,7 +22,7 @@ The coalition’s digital platform, capacity-building.org, functions as a centra
 GCBC is chaired by Mary L. Schapiro former SEC Chair, Chair of the Climate Data Steering Committee, and Vice Chair of GFANZ reflecting the coalition’s commitment to global leadership and high standards of governance. Its members include an unprecedented alliance of UN agencies, multilateral development banks, development finance institutions, philanthropic organizations, and other capacity-building leaders working collectively with thousands of financial institutions, financial centres, and professionals worldwide.
 
 <Image
-  src="/works/GCBC.avif"
+  src="https://res.cloudinary.com/alfanjauhari/image/upload/works/GCBC.avif"
   quality={50}
   width={1024}
   aspectRatio={16 / 9}
