--- a/content/works/tempea.mdx
+++ b/content/works/tempea.mdx
@@ -7,7 +7,7 @@ year: 2024
 techstack: [Wordpress, Elementor, PHP]
 challenge: The client needed a storytelling first brand site that clearly communicated Tempea’s origins, values, and product ethos. Since the project was built on WordPress with Elementor, the main challenge was handling dynamic, structured content especially the product page and modular blocks without forcing rigid template constraints. Default Elementor setups made it hard to consistently manage dynamic content, custom fields, and content relationships across pages, leading to inefficiencies and maintenance friction.
 solution: I designed the site architecture around custom WordPress templates and tailored Elementor integrations, giving content editors full control without breaking structure. I built reusable, dynamic blocks that pull from custom fields, combined with selective PHP overrides where needed to extend Elementor’s logic. The result is a flexible, maintainable WordPress/Elementor build that supports rich storytelling and modular content workflows, empowering the client to update narrative elements and product info cleanly and efficiently while keeping performance and UX solid.
-thumbnail: /works/Tempea.avif
+thumbnail: https://res.cloudinary.com/alfanjauhari/image/upload/works/Tempea.avif
 ---
 
 ## About Tempea
@@ -17,7 +17,7 @@ A purpose-driven brand site for Tempea, a plant-based food product born from a B
 Beyond being an informational site, it functions as a narrative hub that celebrates Tempea’s origin, mission for accessible healthy eating, and environmental consciousness. By leveraging custom templates, dynamic content logic, and modular Elementor-driven sections, the platform enables the team to easily manage storytelling, mission-driven content, and product information in a flexible and scalable system all while delivering a seamless, performance-conscious experience that balances brand expression with usability.
 
 <Image
-  src="/works/Tempea.avif"
+  src="https://res.cloudinary.com/alfanjauhari/image/upload/works/Tempea.avif"
   quality={50}
   width={1024}
   aspectRatio={16 / 9}
