fix(seo): meta tag opengraph

--- a/content/updates/javascript-objects-and-their-friends.mdx
+++ b/content/updates/javascript-objects-and-their-friends.mdx
@@ -415,6 +415,7 @@ Honestly it depends to your needs. But, for myself I'll use `Map{:js}` if:
 1. My keys are not naturally strings (numbers, objects, tuples-ish structures)
 2. I'll be adding or remove keys a lot
 3. I need reliable iteration without extra conversion
+4. I'm lazy
 
 And I'll choose `Object{:js}` over `Map{:js}` if:
 
